TAG: vocload-6-0-8-?
DATE: 09/30/2016
STAFF: lec
TR12427/Disease Ontology (DO)
new file:   DO.config
new file:   DO.rcd
new file:   DOmgislim.config
modified:   HISTORY
modified:   Install
modified:   OBOParser.py
modified:   loadOBO.py
modified:   loadTerms.py
modified:   VOClib.config

obsolete:
loadOBO-DC.py
loadOBO-DC.csh
/data/loads/mgi/vocload/OMIM/OMIM.clusters
/data/loads/mgi/vocload/OMIM/OMIM.clusters.synonym

TAG: vocload-6-0-6-1
DATE: 12/07/2016
STAFF: lec
1) loadTerms.py/UPDATE_TERM/double-quote any single-quote values

TAG: created tr12427 branch/no tag
DATE: 09/30/2016
STAFF: lec
TR12427/DO (Disease Ontology)

TAG: vocload-6-0-5-4
DATE: 09/26/2016
STAFF: lec
1) GO.rcd/DATA_DIR fix

TAG: vocload-6-0-5-3
DATE: 08/08/2016
STAFF: kstone
1) TR12336 - merged

TAG: vocload-6-0-5-2
TAG: vocload-6-0-5-1
DATE: 07/05/2016
STAFF: sc
CHANGES: Merge tr12267 to trunk

TAG: vocload-tr12267-2
DATE: 04-04-2016
STAFF: sc
CHANGES:
1) HPO.config - updated path to input file

TAG: vocload-tr12267-1
DATE: 3/8/2016
STAFF: sc
CHANGES: 
1) HPO.config, HPO.rcd - added
2) Install - create HPO runtime directory
3) loadOBO.py - if HPO, don't load obsolete terms

TAG: vocload-6-0-4-?
TAG: vocload-6-0-4-12
TAG: vocload-6-0-4-11
TAG: vocload-6-0-4-10
TAG: vocload-6-0-4-9
TAG: vocload-6-0-4-8
DATE: 06/10/2016, 6/14/2016
STAFF: lec 
CHANGES:
1) TR12345/ECO (Evidence Code Ontology)
DAG_Label : must add 'union_of'
ECO.config, ECO.rcd, ECOindex.html
OBOParser.py : add tag : 'union_of'

TAG: vocload-6-0-4-7
TAG: vocload-6-0-4-6
DATE: 06/02/2016
STAFF: lec 
CHANGES:
1) TR12328
2) Install/OMIM.config

TAG: vocload-6-0-4-5
TAG: vocload-6-0-4-4
DATE: 05/31/2016
STAFF: lec 
CHANGES:
1) CL.rcd
2) loadTerms.py
3) OMIMtermcheck.py

TAG: vocload-6-0-4-3
DATE: 05/24/2016
STAFF: lec 
CHANGES:
1) remove fail/success variables from Configuration.default/VOClib.config
2) add fix to OBOParser.py/def
3) convert to Git

TAG: vocload-6-0-4-2
DATE: 05/24/2016
STAFF: lec 