@@ -66,9 +66,6 @@ import string
 import db
 import reportlib
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 CRT = reportlib.CRT
 SPACE = reportlib.SPACE
 TAB = reportlib.TAB
