@@ -49,9 +49,6 @@ import vocloadlib
 import mgi_utils
 import db
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 # init database connection
 server = os.environ['DBSERVER']
 database = os.environ['DBNAME']
