@@ -78,9 +78,6 @@ import vocloadlib
 import loadVOC
 import db
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 USAGE = 'Usage:  %s [-n] [-f|-i] [-l <log file>] <RcdFile>' % sys.argv[0]
 TERM_ABBR = ''
 
