@@ -65,9 +65,6 @@ import DAG
 import vocloadlib
 import db
 
-db.setAutoTranslate(False)
-db.setAutoTranslateBE(False)
-
 # init database connection
 server = os.environ['DBSERVER']
 database = os.environ['DBNAME']
